--- a/assignment3/views/members/single.handlebars
+++ b/assignment3/views/members/single.handlebars
@@ -3,70 +3,75 @@
         <img class="card-img-top" src=".../100px160/" alt="Card image cap">
         <div class="card-body">
             <h5 class="card-title">Card title that wraps to a new line</h5>
-            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <p class="card-text">Here is a description of the product.</p>
+            <button type="button" class="btn " data-toggle="modal" data-target="#coachModal">
+                Learn More
+            </button>
         </div>
     </div>
     <div class="card">
         <img class="card-img-top" src=".../100px160/" alt="Card image cap">
         <div class="card-body">
             <h5 class="card-title">Card title that wraps to a new line</h5>
-            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <p class="card-text">Here is a description of the product.</p>
         </div>
     </div>
     <div class="card">
         <img class="card-img-top" src=".../100px160/" alt="Card image cap">
         <div class="card-body">
             <h5 class="card-title">Card title that wraps to a new line</h5>
-            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <p class="card-text">Here is a description of the product.</p>
         </div>
     </div>
     <div class="card">
         <img class="card-img-top" src=".../100px160/" alt="Card image cap">
         <div class="card-body">
             <h5 class="card-title">Card title that wraps to a new line</h5>
-            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <p class="card-text">Here is a description of the product.</p>
         </div>
     </div>
     <div class="card">
         <img class="card-img-top" src=".../100px160/" alt="Card image cap">
         <div class="card-body">
             <h5 class="card-title">Card title that wraps to a new line</h5>
-            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <p class="card-text">Here is a description of the product.</p>
         </div>
     </div>
     <div class="card">
         <img class="card-img-top" src=".../100px160/" alt="Card image cap">
         <div class="card-body">
             <h5 class="card-title">Card title that wraps to a new line</h5>
-            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <p class="card-text">Here is a description of the product.</p>
         </div>
     </div>
     <div class="card">
         <img class="card-img-top" src=".../100px160/" alt="Card image cap">
         <div class="card-body">
             <h5 class="card-title">Card title that wraps to a new line</h5>
-            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <p class="card-text">Here is a description of the product.</p>
         </div>
     </div>
     <div class="card">
         <img class="card-img-top" src=".../100px160/" alt="Card image cap">
         <div class="card-body">
             <h5 class="card-title">Card title that wraps to a new line</h5>
-            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <p class="card-text">Here is a description of the product.</p>
         </div>
     </div>
     <div class="card">
         <img class="card-img-top" src=".../100px160/" alt="Card image cap">
         <div class="card-body">
             <h5 class="card-title">Card title that wraps to a new line</h5>
-            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <p class="card-text">Here is a description of the product.</p>
         </div>
     </div>
     <div class="card">
         <img class="card-img-top" src=".../100px160/" alt="Card image cap">
         <div class="card-body">
             <h5 class="card-title">Card title that wraps to a new line</h5>
-            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <p class="card-text">Here is a description of the product.</p>
         </div>
     </div>
+    <!--- modals -->
+    {{{memberContent}}}
 </div>
