added modals and images, fixed nav anchors

--- a/assignment3/views/layouts/main.handlebars
+++ b/assignment3/views/layouts/main.handlebars
@@ -13,16 +13,16 @@
         <section class="row">
             <nav class="col-sm-12 col-md-4">
                 <ul>
-                    <li><a href="www.google.com">Life Coach</a></li>
-                    <li><a href="www.google.com">Hype Man</a></li>
-                    <li><a href="www.google.com">Wing Man</a></li>
-                    <li><a href="www.google.com">Jokester</a></li>
-                    <li><a href="www.google.com">Cool Nanny</a></li>
-                    <li><a href="www.google.com">Living Soundtrack</a></li>
-                    <li><a href="www.google.com">Smooth Operator</a></li>
-                    <li><a href="www.google.com">Foodie</a></li>
-                    <li><a href="www.google.com">Know-It-All</a></li>
-                    <li><a href="www.google.com">Icon</a></li>
+                    <li><a href="#coachCard">Life Coach</a></li>
+                    <li><a href="#hypeCard">Hype Man</a></li>
+                    <li><a href="#wingCard">Wing Man</a></li>
+                    <li><a href="#jokeCard">Jokester</a></li>
+                    <li><a href="#nanCard">Cool Nanny</a></li>
+                    <li><a href="#djCard">DJ</a></li>
+                    <li><a href="#fitCard">Fit Bot</a></li>
+                    <li><a href="#foodCard">Foodie</a></li>
+                    <li><a href="#knowCard">Know-It-All</a></li>
+                    <li><a href="#styleCard">Stylist</a></li>
                 </ul>
             </nav>
             <div class="col-sm-12 col-md-8">
