--- a/assignment3/views/members/single.handlebars
+++ b/assignment3/views/members/single.handlebars
@@ -1,77 +1,104 @@
 <div class="card-columns">
-    <div class="card">
-        <img class="card-img-top" src=".../100px160/" alt="Card image cap">
+    <div class="card" id="coachCard">
+        <img class="card-img-top" src="https://images.unsplash.com/photo-1526891993611-eca1e7d7b582?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=b4949bbed7ab249b09d51d2ebea2dd87&auto=format&fit=crop&w=1050&q=80" alt="Life Coach Image">
         <div class="card-body">
-            <h5 class="card-title">Card title that wraps to a new line</h5>
-            <p class="card-text">Here is a description of the product.</p>
+            <h5 class="card-title">Life Coach</h5>
+            <p class="card-text">Make sure all of your decisions are well advised</p>
             <button type="button" class="btn " data-toggle="modal" data-target="#coachModal">
                 Learn More
             </button>
         </div>
     </div>
-    <div class="card">
-        <img class="card-img-top" src=".../100px160/" alt="Card image cap">
+    <div class="card" id="hypeCard">
+        <img class="card-img-top" src="https://images.unsplash.com/photo-1505964135045-cdada2f6bf43?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=d1ef51769af5f9010caea85bfa0d032f&auto=format&fit=crop&w=1050&q=80" alt="Hype Man Image">
         <div class="card-body">
-            <h5 class="card-title">Card title that wraps to a new line</h5>
-            <p class="card-text">Here is a description of the product.</p>
+            <h5 class="card-title">Hype Man</h5>
+            <p class="card-text">World Star! Now everyone's sure to witness your flashy exploits</p>
+            <button type="button" class="btn " data-toggle="modal" data-target="#hypeModal">
+                Learn More
+            </button>
         </div>
     </div>
-    <div class="card">
-        <img class="card-img-top" src=".../100px160/" alt="Card image cap">
+    <div class="card" id="wingCard">
+        <img class="card-img-top" src="https://images.unsplash.com/photo-1496360166961-10a51d5f367a?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=2abac325ee96218afb69e1fb0cb23829&auto=format&fit=crop&w=634&q=80" alt="Wing Man Image">
         <div class="card-body">
-            <h5 class="card-title">Card title that wraps to a new line</h5>
-            <p class="card-text">Here is a description of the product.</p>
+            <h5 class="card-title">Wing Man</h5>
+            <p class="card-text">Never strike out again with the ultimate wing man at your side</p>
+            <button type="button" class="btn " data-toggle="modal" data-target="#wingModal">
+                Learn More
+            </button>
         </div>
     </div>
-    <div class="card">
-        <img class="card-img-top" src=".../100px160/" alt="Card image cap">
+    <div class="card" id="jokeCard">
+        <img class="card-img-top" src="https://images.unsplash.com/photo-1520367445093-50dc08a59d9d?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=dd1b5a509be49b79d025f6847bbf314d&auto=format&fit=crop&w=564&q=80" alt="Jokester Image">
         <div class="card-body">
-            <h5 class="card-title">Card title that wraps to a new line</h5>
-            <p class="card-text">Here is a description of the product.</p>
+            <h5 class="card-title">Jokester</h5>
+            <p class="card-text">Get sidesplittng jokes or witty jabs at a moments notice</p>
+            <button type="button" class="btn " data-toggle="modal" data-target="#jokeModal">
+                Learn More
+            </button>
         </div>
     </div>
-    <div class="card">
-        <img class="card-img-top" src=".../100px160/" alt="Card image cap">
+    <div class="card" id="nanCard">
+        <img class="card-img-top" src="http://www.recapo.com/wp-content/uploads/2013/03/grandma-.jpg" alt="Cool Nanny Image">
         <div class="card-body">
-            <h5 class="card-title">Card title that wraps to a new line</h5>
-            <p class="card-text">Here is a description of the product.</p>
+            <h5 class="card-title">Cool Nanny</h5>
+            <p class="card-text">She'll always clean up after you, and never cramps your style</p>
+            <button type="button" class="btn " data-toggle="modal" data-target="#nanModal">
+                Learn More
+            </button>
         </div>
     </div>
-    <div class="card">
-        <img class="card-img-top" src=".../100px160/" alt="Card image cap">
+    <div class="card" id="djCard">
+        <img class="card-img-top" src="https://images.unsplash.com/photo-1496307042754-b4aa456c4a2d?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=16a60d2c0c98a805213d6cad8b88d114&auto=format&fit=crop&w=1050&q=80" alt="DJ Image">
         <div class="card-body">
-            <h5 class="card-title">Card title that wraps to a new line</h5>
-            <p class="card-text">Here is a description of the product.</p>
+            <h5 class="card-title">Personal DJ</h5>
+            <p class="card-text">Spice up your life with the ultimate soundtrack</p>
+            <button type="button" class="btn " data-toggle="modal" data-target="#djModal">
+                Learn More
+            </button>
         </div>
     </div>
-    <div class="card">
-        <img class="card-img-top" src=".../100px160/" alt="Card image cap">
+    <div class="card" id="fitCard">
+        <img class="card-img-top" src="https://images.unsplash.com/photo-1519311965067-36d3e5f33d39?ixlib=rb-0.3.5&s=de11b833f7bf83ea86fbd59e0f6ab1dd&auto=format&fit=crop&w=1502&q=80" alt="Card Image">
         <div class="card-body">
-            <h5 class="card-title">Card title that wraps to a new line</h5>
-            <p class="card-text">Here is a description of the product.</p>
+            <h5 class="card-title">Fit Bot</h5>
+            <p class="card-text">Get in shape and have fun doing it!</p>
+            <button type="button" class="btn " data-toggle="modal" data-target="#fitModal">
+                Learn More
+            </button>
         </div>
     </div>
-    <div class="card">
-        <img class="card-img-top" src=".../100px160/" alt="Card image cap">
+    <div class="card" id="foodCard">
+        <img class="card-img-top" src="https://images.unsplash.com/photo-1532635211-8ec15f2ce05c?ixlib=rb-0.3.5&s=d86e4b44a600c93bb44fe6c23c6e918f&auto=format&fit=crop&w=634&q=80" alt="Foodie Image">
         <div class="card-body">
-            <h5 class="card-title">Card title that wraps to a new line</h5>
-            <p class="card-text">Here is a description of the product.</p>
+            <h5 class="card-title">Foodie</h5>
+            <p class="card-text">Hungry? Now you always know the best spot to grab a bite</p>
+            <button type="button" class="btn " data-toggle="modal" data-target="#foodModal">
+                Learn More
+            </button>
         </div>
     </div>
-    <div class="card">
-        <img class="card-img-top" src=".../100px160/" alt="Card image cap">
+    <div class="card" id="knowCard">
+        <img class="card-img-top" src="https://images.unsplash.com/photo-1519785545402-44149e9af5a6?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=63fa6bce0fd25670263b4c3b2d6efe0e&auto=format&fit=crop&w=1050&q=80" alt="Know It All Image">
         <div class="card-body">
-            <h5 class="card-title">Card title that wraps to a new line</h5>
-            <p class="card-text">Here is a description of the product.</p>
+            <h5 class="card-title">Know-It-All</h5>
+            <p class="card-text">Forget Google - This bot has all the answers</p>
+            <button type="button" class="btn " data-toggle="modal" data-target="#knowModal">
+                Learn More
+            </button>
         </div>
     </div>
-    <div class="card">
-        <img class="card-img-top" src=".../100px160/" alt="Card image cap">
+    <div class="card" id="styleCard">
+        <img class="card-img-top" src="https://images.unsplash.com/photo-1502898295-455afaf0f015?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=b2c2d7e17e4ae0b04d2569c9f7407203&auto=format&fit=crop&w=634&q=80" alt="Stylist Image">
         <div class="card-body">
-            <h5 class="card-title">Card title that wraps to a new line</h5>
-            <p class="card-text">Here is a description of the product.</p>
+            <h5 class="card-title">Stylist</h5>
+            <p class="card-text">Always look your best thanks to this style expert</p>
+            <button type="button" class="btn " data-toggle="modal" data-target="#styleModal">
+                Learn More
+            </button>
         </div>
     </div>
     <!--- modals -->
-    {{{memberContent}}}
+    {{{memberModals}}}
 </div>
