updated sass and gulpfile

--- a/assignment3/src/styles/custom.scss
+++ b/assignment3/src/styles/custom.scss
@@ -96,3 +96,15 @@ section.#{$main-content-class} {
     }
   }
 }
+
+.card-columns {
+  @include media-breakpoint-only(lg) {
+    column-count: 3;
+  }
+  @include media-breakpoint-only(md) {
+    column-count: 2;
+  }
+  @include media-breakpoint-only(sm) {
+    column-count: 1;
+  }
+}
