--- a/assignment3/src/styles/variables.scss
+++ b/assignment3/src/styles/variables.scss
@@ -2,4 +2,4 @@ $body-background: #fefefe;
 $brand-primary: #999;
 $primary-font-size: 14pt;
 $secondary-font-size: $primary-font-size / 2.5pt;
-$main-content-class: "book";
+$main-content-class: "member";
