--- a/assignment3/views/layouts/main.handlebars
+++ b/assignment3/views/layouts/main.handlebars
@@ -10,6 +10,7 @@
 <body>
     <div class="container">
         <h1 id="the-heading">Build Your Entourage!</h1>
+        <h4 id="sub-heading" >Fill your fam with diverse selction of AI Powered robotic buddies</h4>
         <section class="row">
             <nav class="col-sm-12 col-md-4">
                 <ul>
