--- a/assignment3/src/styles/variables.scss
+++ b/assignment3/src/styles/variables.scss
@@ -1,5 +1,6 @@
-$body-background: #fefefe;
-$brand-primary: #999;
+$body-background: #2e231d;
+$brand-primary: #ffac54;
 $primary-font-size: 14pt;
-$secondary-font-size: $primary-font-size / 2.5pt;
+$brand-secondary: #614231;
+$secondary-font-size: $primary-font-size / 3pt;
 $main-content-class: "member";
