--- a/assignment3/public/css/styles.css
+++ b/assignment3/public/css/styles.css
@@ -6342,51 +6342,61 @@ a.text-dark:hover, a.text-dark:focus {
  @import "print";
 
  */
-/*
-.card-columns {
-  @include media-breakpoint-only(lg) {
-    column-count: 3;
-  }
-  @include media-breakpoint-only(md) {
-    column-count: 2;
-  }
-  @include media-breakpoint-only(sm) {
-    column-count: 1;
-  }
-}
-*/
 * {
   box-sizing: border-box; }
 
 body,
 html {
-  background: #fefefe;
-  color: #666666;
+  background: #2e231d;
+  color: #ed7a00;
   font-family: Georgia, Cambria, "Times New Roman", Times, serif;
   font-size: 14pt;
   background-clip: border-box; }
 
 p {
-  font-size: 5.6; }
+  font-size: 4.66667;
+  color: #614231; }
+
+h4 {
+  color: #a57053; }
 
 section.member h2 {
   border-bottom: 2px solid #000; }
 
 section.member p {
-  font-size: 11.6pt; }
+  font-size: 12pt; }
   main section.member p {
-    color: #999; }
+    color: #ffac54; }
   section.member p span {
     font-style: italic; }
 
-@media (min-width: 992px) and (max-width: 1199.98px) {
-  .card-columns {
-    column-count: 3; } }
+.card {
+  background: rgba(0, 0, 0, 0.3);
+  padding-right: 8px;
+  padding-left: 8px;
+  padding-top: 8px;
+  padding-bottom: 8px; }
+  .card p {
+    color: white; }
 
-@media (min-width: 768px) and (max-width: 991.98px) {
-  .card-columns {
-    column-count: 2; } }
+.card-columns {
+  padding-right: 0px;
+  padding-left: 0px; }
+  @media (min-width: 992px) and (max-width: 1199.98px) {
+    .card-columns {
+      column-count: 4; } }
+  @media (min-width: 768px) and (max-width: 991.98px) {
+    .card-columns {
+      column-count: 3; } }
+  @media (min-width: 576px) and (max-width: 767.98px) {
+    .card-columns {
+      column-count: 2; } }
 
-@media (min-width: 576px) and (max-width: 767.98px) {
-  .card-columns {
-    column-count: 1; } }
+nav {
+  color: #874500; }
+  nav a {
+    color: white; }
+
+button {
+  background: rgba(0, 0, 0, 0.6);
+  color: white; }
